Fix sync-credential-related metrics

This CL makes PasswordManager_SyncCredentialUsed obsolete, beacuse it does not
meaure what it should (see the associated bug).

The CL also introduces a new user action,
PasswordManager_SyncCredentialFilledAndLoginSuccessfull, to actually measure
what the above action was supposed to measure.

The CL also introduces another user action, PasswordManager_ProcessingUpdate,
which keeps measuring what PasswordManager_SyncCredentialUsed measured, because
that data was also useful.

BUG=635428

Review-Url: https://codereview.chromium.org/2220423002
Cr-Commit-Position: refs/heads/master@{#410999}

Former-commit-id: 3a69d6d6755a3f7c645ea682d777e55d7d4340b3